# spam-shield

./: .gitignore  README.md  TODO.txt  config.py  main.py  main_bert.py  main_hybrid.py  main_nb.py  pyproject.toml  test_context_hybrid.py  train_all.py
api/: api.py  bert_routes.py  hybrid_routes.py  main.py  nb_routes.py  schemas.py
data/: spam_sms.csv  train.csv
helpers/: training.py
helpers/bert/: bert_trainer.py  dataset.py  training.py
helpers/naive_bayes/: nb_trainer.py  training.py
model/: agent.py  bert_agent.py  hybrid_agent.py  nb_agent.py
utils/: context.py
